--- a/nodejs-server/package.json
+++ b/nodejs-server/package.json
@@ -2,11 +2,11 @@
   "name": "nodejs-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node index.js",
-    "start": "node index.js"
+    "server": "node app.js",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
