--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "https://sitevente1-serveur.herokuapp.com/",
   "dependencies": {
+    "moment": "^2.24.0",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
