--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -2,6 +2,7 @@
   "name": "react-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://sitevente1-serveur.herokuapp.com/",
   "dependencies": {
     "moment": "^2.24.0",
     "react": "^16.7.0",
