Changed to live server

--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -2,8 +2,8 @@
   "name": "react-frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://sitevente1-serveur.herokuapp.com/",
   "dependencies": {
+    "axios": "^0.18.0",
     "moment": "^2.24.0",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
