--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -9,9 +9,11 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
     "react-input-mask": "^2.0.4",
+    "react-modal": "^3.8.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-spinners": "^0.5.3",
     "reactstrap": "^7.1.0"
   },
   "scripts": {
