--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-spinners": "^0.5.3",
+    "react-timeout": "^1.2.0",
     "reactstrap": "^7.1.0"
   },
   "scripts": {
