--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/maps": "^0.5.5",
     "axios": "^0.18.0",
+    "google-map-react": "^1.1.2",
     "moment": "^2.24.0",
+    "pigeon-maps": "^0.12.1",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
+    "react-geocode": "^0.1.2",
+    "react-google-maps": "^9.4.5",
     "react-input-mask": "^2.0.4",
     "react-modal": "^3.8.1",
     "react-router": "^4.3.1",
