--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "2.1.3",
     "react-spinners": "^0.5.3",
     "react-timeout": "^1.2.0",
+    "react-transition-group": "^2.7.1",
     "reactstrap": "^7.1.0"
   },
   "scripts": {
