--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -8,6 +8,7 @@
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
+    "react-idle-timer": "^4.2.5",
     "react-input-mask": "^2.0.4",
     "react-modal": "^3.8.1",
     "react-router": "^4.3.1",
